# adaptive-swim

./: .gitignore  .importlinter  ARCHITECTURE.md  CLAUDE.md  DELTA_MANIFEST.md  IMPLEMENTATION_REPORT.md  LICENSE-NOTES.md  Makefile  PHASE1_RELEASE_MANIFEST.json  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/catalog/: adaptive_swim_external_studies_5_6_7_model_ready_v1.json  adaptive_swim_sensor_imu_frontcrawl_model_ready_v1.json  adaptive_swim_stroke_dataset_quarantined_v1.json  adaptive_swim_training_fatigue_weekly_and_repeat_model_ready_v1.json  adaptive_swim_unified_official_pacing_all_sources_v3.json
data/schemas/: controlled_studies.json  imu_sensor.json  quarantine.json  race_pacing_segments.json  training_fatigue.json
docs/adr/: ADR-031-stop-pause-and-ghost-alignment.md  ADR-032-external-data-bootstrapping.md  ADR-033-deterministic-identity-and-time.md  ADR-034-distance-specific-approved-pace-profiles.md  ADR-035-pre-session-planning-ml-and-coach-authority.md  ADR-036-start-mode-and-official-distance-authority.md  ADR-037-append-only-event-journal-and-historical-replay.md  ADR-038-continuous-pace-curves-and-phase-aware-model-generation.md  ADR-039-dataset-realistic-pacing-prior-and-target-envelopes.md  ADR-040-deterministic-session-analytics-and-derived-reports.md  ADR-041-phase1-vertical-slice-verification-and-release-closure.md  README.md  _template.md
docs/data/: data-leakage-and-partitioning.md  data-source-registry.md  dataset-model-roles.md  external-data-strategy.md  normalized-research-schema.md  raw-to-canonical-mapping.md  split-quality.md  synthetic-data-rules.md
docs/domain/: event-catalog.md  glossary.md  state-machines.md
docs/plan/: commit2-contract-plan.md  deferred-map.md  first-10-commits.md  model-roadmap.md  phase1-commit-plan.md
docs/testing/: invariants.md  phase1-completeness.md  test-strategy.md
src/analytics/: __init__.py  _math.py  confidence.py  curves.py  errors.py  identity.py  pacing.py  report_builder.py  sensors.py  serialization.py  splits.py  stops.py  types.py
src/contracts/: __init__.py  _base.py  analytics.py  commands.py  continuous_pace.py  data_assets.py  enums.py  errors.py  event_log.py  events.py  external_data.py  forecasting.py  ghost.py  pace_profiles.py  pacing.py  physiology.py  session_report.py  splits.py  stop_pause.py  version.py  workout.py
src/e2e/: __init__.py  cases.py  errors.py  identity.py  manifest.py  runner.py  types.py  verification.py
src/persistence/: __init__.py  codec.py  errors.py  jsonl_event_log.py  recovery.py  session_report_store.py  types.py
src/simulator/: __init__.py  __main__.py  cli.py  harness.py  provenance.py  scenarios.py  virtual_swimmer.py
src/swimcore/: __init__.py
src/swimtools/: __init__.py  _report_io.py  arch_check.py  build_session_report.py  completeness_check.py  data_catalog.py  data_splitting.py  gen_schemas.py  negative_check.py  run_e2e.py  run_scenario.py  swimming_features.py  validate_dataset_bundle.py  verify_e2e_bundle.py  verify_report.py
tests/: conftest.py
tests/analytics/: conftest.py  test_report_blocker_regressions.py  test_report_builder.py  test_report_cli.py  test_report_golden_files.py  test_report_identity_and_serialization.py  test_report_quality_and_provenance.py  test_report_verifier.py  test_simulator_reports.py
tests/architecture/: test_analytics_boundaries.py  test_dataset_boundaries.py  test_e2e_boundaries.py  test_forbidden_paths.py  test_import_rules.py  test_no_io_in_swimcore.py  test_phase1_completeness.py  test_purity.py  test_replay_boundaries.py  test_simulator_boundaries.py
tests/e2e/: conftest.py  test_backward_compatibility_matrix.py  test_cross_component_invariants.py  test_e2e_bundle_verifier.py  test_e2e_cli.py  test_e2e_determinism.py  test_e2e_manifest.py  test_failure_atomicity.py  test_golden_artifacts.py  test_phase1_case_matrix.py  test_phase1_vertical_slice.py
tests/property/: test_continuous_curve_invariants.py  test_e2e_determinism.py  test_e2e_state_equivalence.py  test_profile_and_session_invariants.py  test_replay_invariants.py  test_report_determinism.py  test_report_roundtrip.py  test_simulator_determinism.py  test_split_metric_invariants.py
tests/replay/: _golden_helpers.py  _stream_helpers.py  test_codec.py  test_event_batch_contract.py  test_event_log_failure_semantics.py  test_event_log_idempotency.py  test_golden_replay.py  test_jsonl_event_log.py  test_replay_lifecycle.py  test_replay_pacing.py  (+4 more)
(+210 files in other folders)
