[project]
name = "adaptive-swim"
version = "0.1.0"
description = "Adaptive Swim Pacing Platform — complete Phase 1 deterministic headless vertical slice"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.21",
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "import-linter>=2.0",
    "pytest-socket>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "e2e: Phase 1 full headless vertical-slice and release-bundle verification",
    "property: property-based domain and determinism invariants",
    "replay: append-only journal and historical replay determinism",
    "architecture: package boundaries and purity guardrails",
    "simulator: deterministic embedded-core simulator scenarios",
    "analytics: deterministic derived session reports",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.hypothesis]
